--- a/Fundamentos de angular/fundamentosAngular/src/app/app.component.scss
+++ b/Fundamentos de angular/fundamentosAngular/src/app/app.component.scss
@@ -1,6 +1,31 @@
-.box{
+.box {
   height: 200px;
   width: 200px;
   overflow: auto;
   background-color: red;
+}
+
+.products--grid {
+  display: flex;
+  flex-direction: column;
+
+  div {
+    img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    h2,
+    p {
+      margin: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 40em) {
+  .products--grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 15px;
+  }
 }
