--- a/Fundamentos de angular/fundamentosAngular/src/app/app.component.html
+++ b/Fundamentos de angular/fundamentosAngular/src/app/app.component.html
@@ -1,3 +1,6 @@
+<h1>clas & style</h1>
+<input type="text" required #nameInput="ngModel" [(ngModel)]="person.name" />
+<hr/>
 <h1>*ngSwitch</h1>
 <input type="text" required [(ngModel)]="person.name" />
 <div [ngSwitch]="person.name">
