--- a/Fundamentos de angular/fundamentosAngular/src/app/app.component.scss
+++ b/Fundamentos de angular/fundamentosAngular/src/app/app.component.scss
@@ -22,6 +22,20 @@
   }
 }
 
+.message-error{
+  background: red;
+  color: white;
+  opacity: 0;
+  transition: all linear .5s;
+  &.invalid{
+    opacity: 1;
+  }
+}
+
+.styles{
+  display: grid;
+  grid-template-columns: repeat(2 , 1fr);
+}
 @media screen and (min-width: 40em) {
   .products--grid {
     display: grid;
