--- a/Fundamentos de angular/fundamentosAngular/src/app/app.component.html
+++ b/Fundamentos de angular/fundamentosAngular/src/app/app.component.html
@@ -1,3 +1,57 @@
+<h1>Formulario</h1>
+<form (ngSubmit)="onRegistrer()" #myForm="ngForm">
+<div class="input-group">
+  <label for="name">Name
+  </label>
+  <input type="text" name="name" required id="name" [(ngModel)]="register.name">
+  <p>Mensajes de error</p>
+</div>
+<div class="input-group">
+  <label for="email">Email
+  </label>
+  <input type="email" name="email" required id="email" [(ngModel)]="register.email">
+  <p>Mensajes de error</p>
+</div>
+<div class="input-group">
+  <label for="password">password
+  </label>
+  <input type="password" name="password" required id="password" [(ngModel)]="register.password">
+  <p>Mensajes de error</p>
+</div>
+<button [disabled]="myForm.invalid" type="submit">Registrar</button>
+</form>
+<hr/>
+
+
+<h1>NgClass y NgStyle</h1>
+<input type="text" required #nameInput4="ngModel" [(ngModel)]="person.name" />
+<hr class="line-error" [ngClass]="{
+  'valid': nameInput4.valid,
+  'invalid': nameInput4.invalid
+}"/>
+<p class="message-error" [class.invalid]="nameInput2.invalid">
+  el campo es requerido
+</p>
+
+<div class="styles">
+  <div>
+
+<input type="number" [(ngModel)]="box.height" />
+<input type="number" [(ngModel)]="box.width" />
+<input type="color" [(ngModel)]="box.background" />
+  </div>
+  <div>
+    <div [ngStyle]="{
+      'width.px': box.width,
+      'height.px': box.height,
+      'background-color' : box.background,
+      'display': 'block'
+
+    }"></div>
+  </div>
+</div>
+
+<hr/>
 <h1>class & style</h1>
 <input type="text" required #nameInput2="ngModel" [(ngModel)]="person.name" />
 <p class="message-error" [class.invalid]="nameInput2.invalid">
