--- a/componentes y servicios angular/my-store/src/app/components/img/img.component.html
+++ b/componentes y servicios angular/my-store/src/app/components/img/img.component.html
@@ -1,1 +1,4 @@
-<p>img works!</p>
+<img  width=200px [src]="img" *ngIf="img; else elseImg">
+<ng-template #elseImg>
+  <img src="./assets/images/default.png" alt="image default">
+</ng-template>
