--- a/componentes y servicios angular/my-store/src/app/components/products/products.component.html
+++ b/componentes y servicios angular/my-store/src/app/components/products/products.component.html
@@ -4,6 +4,12 @@
 <p>
   Total: ${{total}}
 </p>
+<p>
+  Today: {{today | date:'short'}}
+</p>
+<p>
+  Date: {{date | date:'short'}}
+</p>
 <div class="products--grid">
   <app-product
   [product]="product"
