--- a/componentes y servicios angular/my-store/src/app/components/products/products.component.html
+++ b/componentes y servicios angular/my-store/src/app/components/products/products.component.html
@@ -8,7 +8,10 @@
   Today: {{today | date:'short'}}
 </p>
 <p>
-  Date: {{date | date:'short'}}
+  Today: {{today | timeAgo}}
+</p>
+<p>
+  Otra fecha: {{date | date:'short'}}
 </p>
 <div class="products--grid">
   <app-product
