--- a/componentes y servicios angular/my-store/src/app/components/product/product.component.html
+++ b/componentes y servicios angular/my-store/src/app/components/product/product.component.html
@@ -1,4 +1,5 @@
 <app-img [img]="product.image"></app-img>
 <h2>{{product.price | currency:'COP'}}</h2>
 <p>{{product.title | reverse}}</p>
+<p appHighlighgt >{{product.description}}</p>
 <button (click)="onAddToCart()">Add cart</button>
