--- a/componentes y servicios angular/my-store/src/app/components/nav/nav.component.scss
+++ b/componentes y servicios angular/my-store/src/app/components/nav/nav.component.scss
@@ -11,8 +11,7 @@
       background: transparent;
     }
   }
-
-  .side-menu{
+  .side-menu {
     position: fixed;
     top: 0;
     left: 0;
@@ -24,8 +23,7 @@
     justify-content: flex-start;
     transform: translateX(-100%);
     transition: all ease-out .5s;
-
-    &.active{
+    &.active {
       transform: translateX(0);
     }
   }
@@ -60,6 +58,22 @@
     align-items: center;
     .account {
       margin-right: .5em;
+    }
+    .cart {
+      position: relative;
+      .counter {
+        width: 20px;
+        height: 20px;
+        line-height: 20px;
+        background: #ACD9B2;
+        border-radius: 50%;
+        display: block;
+        color: white;
+        text-align: center;
+        position: absolute;
+        top: -10px;
+        right: -10px;
+      }
     }
   }
 }
